<resources>
    <string name="app_name">NewLogin</string>
    <string name="verify">Verify otp</string>
    <string name="send_otp">Send OTP</string>
    <string name="check_available_stones">Check available Stones</string>
    <string name="share_your_valuable_feedback">Share Your Valuable Feedback</string>
    <string name="emailEditText">Enter Your Email here:</string>
    <string name="sendButton">Submit</string>
    <string name="messageEdittext">Please Enter Your Message:</string>
    <string name="contactusq">Write to Us for any Queries</string>
    <string name="contactus">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="our_team">Our Team</string>
    <string name="reg">New User? Register Here</string>
    <string name="find_nearest_shop">Find Nearest Shop</string>
    <string name="locate_nearest_pickup_and_drop_station">Locate nearest pickup and drop station</string>
    <string name="textview">User Registration Form</string>
    <string name="qtn">Enter Quantity</string>
</resources>
